--- a/src/app/features/students/components/students-form/students-form.component.scss
+++ b/src/app/features/students/components/students-form/students-form.component.scss
@@ -5,30 +5,45 @@
 
 .group--row.form--row {
   margin-bottom: 20px;
-
-  edu-input ::ng-deep,
-  edu-select ::ng-deep {
-    height: 54px;
-    width: 100%;
-    .wrapper {
-      padding: 0 15px;
+  edu-input.middleName {
+    max-width: 173px;
+    .edu-label {
+      white-space: nowrap;
     }
-    label,
-    input {
-      font: 400 16px/24px Raleway;
-    }
+  }
+  edu-input.p-0 ::ng-deep .wrapper {
+    padding: 0;
+  }
 
-    // &:not(:last-child) {
+  edu-input,
+  edu-select {
     margin: 0 10px;
-    // }
+    &:first-child {
+      margin-left: 0;
+    }
+    &:last-child {
+      margin-right: 0;
+    }
+
+    ::ng-deep {
+      height: 54px;
+      width: 100%;
+      .wrapper {
+        padding: 0 15px;
+      }
+      label,
+      input {
+        font: 400 16px/24px Raleway;
+      }
+    }
   }
 }
 edu-phone-icon-field ::ng-deep,
 edu-icon-field ::ng-deep {
-  width: calc(50% - 20px) !important;
+  width: calc(50% - 10px) !important;
   display: flex;
   height: 54px;
-  margin: 0 10px;
+  margin-right: 10px;
   .form__input-wrapper.form__input-wrapper--main {
     margin: 0;
     width: 100%;
@@ -49,9 +64,12 @@ edu-icon-field ::ng-deep {
 }
 
 edu-phone-icon-field ::ng-deep {
-  width: calc(100% - 20px) !important;
+  width: 100% !important;
+  margin: 0;
 }
-
+.modal__content-profile {
+  margin-right: 40px;
+}
 .modal {
   @include modal();
   padding: 110px 50px 60px 50px;
